<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="Pedidos">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/idButtonNovoPedido"
                    android:title="@string/title_button_novo_pedido"
                    />
                <item
                    android:id="@+id/idButtonHistorico"
                    android:title="@string/title_button_historico_pedidos"/>
            </group>
        </menu>
    </item>

    <item android:title="Cardápio">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/idButtonGerenciarGardapio"
                    android:title="@string/title_button_gerenciar_cardapio"/>
            </group>
        </menu>
    </item>

    <item android:title="Configurações">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/idButtonSair"
                android:title="@string/title_button_sair"/>
            </group>
        </menu>
    </item>

</menu>