<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:layout_width="130dp"
    android:layout_height="200dp">

    <TextView
        android:id="@+id/idTxtViewNomeProdutoPromo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/txtview_nome_produto_promo"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/idImagemProdutoPromo"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_weight="3"
        android:gravity="center"
        android:scaleType="fitXY"
        android:contentDescription="@string/cd_imagem_produto_promo"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/idTxtViewPrecoProdutoPromo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left|center"
            android:text="@string/txtview_preco_produto_promo"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/idButtonAdicionarQtdeItemPromo"
            android:layout_width="26dp"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:layout_gravity="center|right"
            android:padding="0dp"
            android:backgroundTint="@color/amarelo_botao_adicionar_qtde_item"
            android:text="@string/button_adc_produto_carrinho_promo"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center" />
    </LinearLayout>


</LinearLayout>