<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".classes.CadastroProduto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/idEditTextNomeProdutoCadastro"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text_layout"
            android:ems="10"
            android:hint="@string/hint_edittext_nome_produto_cadastro"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/idEditTextDescricaoProdutoCadastro"
            android:layout_width="0dp"
            android:layout_height="158dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text_layout"
            android:ems="10"
            android:hint="@string/hint_edittext_descricao_produto_cadastro"
            android:inputType="textPersonName"
            android:padding="10dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idEditTextNomeProdutoCadastro"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/idEditTextPrecoProdutoCadastro"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_layout"
            android:ems="10"
            android:hint="@string/hint_edittext_preco_produto_cadastro"
            android:inputType="textPersonName"
            android:padding="10dip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idEditTextDescricaoProdutoCadastro"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/idEditTextDescontoProdutoCadastro"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/edit_text_layout"
            android:ems="10"
            android:hint="@string/hint_edittext_desconto_produto_cadastro"
            android:inputType="textPersonName"
            android:padding="10dip"
            app:layout_constraintStart_toEndOf="@+id/idEditTextPrecoProdutoCadastro"
            app:layout_constraintTop_toTopOf="@+id/idEditTextPrecoProdutoCadastro"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <ImageView
            android:id="@+id/idButtonCadastrarImagemProdutoCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idEditTextPrecoProdutoCadastro"
            app:srcCompat="@drawable/adicionarimagem"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/cd_imageview_button_inserir_foto"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/idTxtViewLabelImagemProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txtview_label_button_inserir_foto"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idButtonCadastrarImagemProdutoCadastro" />

        <Button
            android:id="@+id/idButtonCadastrarProduto"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/vermelho_botão_cadastrar_produto"
            android:text="@string/button_cadastrar_produto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTxtViewLabelImagemProduto" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>