<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroUsuario">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/idTextViewTituloAppPageRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="5"
            android:shadowRadius="4"
            android:text="@string/textview_nome_aplicativo_page_registrar"
            android:textColor="@color/vermelho_titulo_app_page_registrar_usuario"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/idTextViewNovoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/textview_novo_usuario_page_registrar"
            android:textColor="@color/vermelho_da_label_nu_page_registrar_usuario"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTextViewTituloAppPageRegistrar" />

        <EditText
            android:id="@+id/idEditTextNomeCadastro"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_text_layout"
            android:ems="10"
            android:hint="@string/hint_edittext_nome_completo_page_registrar"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTextViewNovoUsuario"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/idEditTextEmailCadastro"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_layout"
            android:ems="10"
            android:hint="@string/hint_edittext_email_page_registrar"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idEditTextNomeCadastro"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/idEditTextUsuarioCadastro"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_layout"
            android:ems="10"
            android:hint="@string/hint_edittext_nome_usuario_page_registrar"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idEditTextEmailCadastro"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/idEditTextSenhaCadastro"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_layout"
            android:ems="10"
            android:hint="@string/hint_edittext_senha_page_registrar"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idEditTextUsuarioCadastro"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/idEditTextConfirmarSenhaCadastro"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_layout"
            android:ems="10"
            android:hint="@string/hint_edittext_confirmar_senha_page_registrar"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idEditTextSenhaCadastro"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/idButtonRegistrarCadastro"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/vermelho_botão_registrar_page_registrar_usuario"
            android:text="@string/button_registrar_page_registrar"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idEditTextConfirmarSenhaCadastro" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</FrameLayout>