<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".models.Pedidos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp">

        <ImageView
            android:id="@+id/idImageViewItemBatataPedidos"
            android:layout_width="12dp"
            android:layout_height="150dp"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/content_description_imageview_produto"
            android:scaleType="fitXY"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/idTxtNomeProdutoPedidos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:layout_marginEnd="2dp"
            android:text="@string/txt_nome_produto"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/idTxtPrecoPedidos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="2dp"
            android:layout_weight="2"
            android:text="@string/txt_preco_produto"
            android:textColor="@color/black"/>

        <!-- NumberPicker: idNumberPickerQuantidadeItem-->
        <NumberPicker
            android:id="@+id/idNPQtdeProdutoNoCarrinhoPedidos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

</FrameLayout>

