<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarPedido">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/idTextViewBemVindo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:textColor="@color/vermelho_textview_bem_vindo"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="5"
            android:shadowRadius="4"
            android:text="@string/textview_bem_vindo_page_iniciar_pedido"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/idTextViewNomeUsuarioLogado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Brenda"
            android:textColor="@color/vermelho_textview_bem_vindo"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="5"
            android:shadowRadius="4"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTextViewBemVindo" />

        <TextView
            android:id="@+id/idTextViewPromocao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="5"
            android:shadowRadius="4"
            android:text="@string/textview_promocao_page_iniciar_pedido"
            android:textColor="@color/vermelho_textview_em_promocao"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTextViewNomeUsuarioLogado" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="350dp"
            android:layout_height="232dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/layout_box_promocao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTextViewPromocao">

            <ImageView
                android:id="@+id/idImageViewIconeAnuncio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/imageview_contentdescription_iconeanuncio"
                android:src="@drawable/iconeanuncio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/idImageViewIconePromocao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/imageview_contentdescription_iconepromocao"
                android:src="@drawable/iconpromocao"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/idImageViewIconeSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/imageview_contentdescription_iconesale"
                android:src="@drawable/iconesale"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/idButtonIniciarPedido"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginBottom="44dp"
            android:backgroundTint="@color/vermelho_botão_iniciar_pedido"
            android:text="@string/button_iniciar_pegido_page_iniciar_pedido"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>